[gd_scene load_steps=12 format=3 uid="uid://dnqhkg3xnom4x"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_olu4w"]
[ext_resource type="Texture2D" uid="uid://cxypdndckbx2f" path="res://assets/planets/5.png" id="3_1st0h"]
[ext_resource type="Texture2D" uid="uid://c42lmkjch1ytw" path="res://assets/planets/1.png" id="4_774pd"]
[ext_resource type="FontFile" uid="uid://djhj8whancoyr" path="res://assets/futura.ttf" id="4_n1vqi"]
[ext_resource type="Texture2D" uid="uid://fwr7iiurcw15" path="res://assets/planets/25.png" id="5_21een"]
[ext_resource type="Texture2D" uid="uid://cake72mln8hgb" path="res://assets/title_image.png" id="7_dyneq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0abhs"]
radius = 60.0333

[sub_resource type="Animation" id="Animation_ob4cj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_espau"]
resource_name = "fade_to_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_er5v2"]
resource_name = "fade_to_normal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yxrl"]
_data = {
"RESET": SubResource("Animation_ob4cj"),
"fade_to_black": SubResource("Animation_espau"),
"fade_to_normal": SubResource("Animation_er5v2")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_olu4w")

[node name="Start Button" type="Area2D" parent="."]
position = Vector2(476, 246)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start Button"]
shape = SubResource("CircleShape2D_0abhs")

[node name="Sprite2D" type="Sprite2D" parent="Start Button"]
texture = ExtResource("3_1st0h")
region_enabled = true
region_rect = Rect2(119, 57, 322, 322)

[node name="Label" type="Label" parent="Start Button"]
offset_left = -60.0
offset_top = -42.0
offset_right = 58.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_n1vqi")
theme_override_font_sizes/font_size = 50
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Quit Button" type="Area2D" parent="."]
position = Vector2(245, 478)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quit Button"]
shape = SubResource("CircleShape2D_0abhs")

[node name="Sprite2D" type="Sprite2D" parent="Quit Button"]
texture = ExtResource("4_774pd")
region_enabled = true
region_rect = Rect2(119, 57, 322, 322)

[node name="Label" type="Label" parent="Quit Button"]
offset_left = -60.0
offset_top = -42.0
offset_right = 58.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_n1vqi")
theme_override_font_sizes/font_size = 50
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Credits Button" type="Area2D" parent="."]
position = Vector2(816, 333)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Credits Button"]
shape = SubResource("CircleShape2D_0abhs")

[node name="Sprite2D" type="Sprite2D" parent="Credits Button"]
texture = ExtResource("5_21een")
region_enabled = true
region_rect = Rect2(119, 57, 322, 322)

[node name="Label" type="Label" parent="Credits Button"]
offset_left = -80.0
offset_top = -42.0
offset_right = 92.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_n1vqi")
theme_override_font_sizes/font_size = 50
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title Sprite" type="Sprite2D" parent="."]
position = Vector2(575, 54)
texture = ExtResource("7_dyneq")

[node name="TransitionScreen" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionScreen"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionScreen"]
root_node = NodePath("../ColorRect")
libraries = {
"": SubResource("AnimationLibrary_4yxrl")
}

[connection signal="input_event" from="Start Button" to="." method="_on_start_button_input_event"]
[connection signal="mouse_entered" from="Start Button" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Start Button" to="." method="_on_start_button_mouse_exited"]
[connection signal="input_event" from="Quit Button" to="." method="_on_quit_button_input_event"]
[connection signal="mouse_entered" from="Quit Button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="Quit Button" to="." method="_on_quit_button_mouse_exited"]
[connection signal="input_event" from="Credits Button" to="." method="_on_credits_button_input_event"]
[connection signal="mouse_entered" from="Credits Button" to="." method="_on_credits_button_mouse_entered"]
[connection signal="mouse_exited" from="Credits Button" to="." method="_on_credits_button_mouse_exited"]
[connection signal="animation_finished" from="TransitionScreen/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
